conclusio basic layout

--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -317,8 +317,7 @@
   url = {http://link.springer.com/10.1007/0-387-33006-2_4},
   urldate = {2024-02-06},
   isbn = {978-0-387-32774-7},
-  langid = {english},
-  file = {/home/ro/Zotero/storage/KJUL8XMZ/Birsan and Tiba - 2006 - One Hundred Years Since the Introduction of the Set Distance by Dimitrie Pompeiu.pdf}
+  langid = {english}
 }
 
 @article{borowiczUltraHypofractionatedProtonTherapy2021,
@@ -337,6 +336,22 @@
   urldate = {2023-09-23},
   abstract = {Few studies have directly compared passive scattering (PS) to intensity-modulated proton therapy (IMPT) in the delivery of ultra-hypofractionated proton beams to the localized prostate cancer (PCa). In this preliminary study involving five patients previously treated with CyberKnife, treatment plans were created for PS and IMPT (36.25 CGE in five fractions with two opposing fields) to compare the dosimetric parameters to the planning target volume (PTV) and organs-at-risk (OAR: rectum, bladder, femoral heads). Both plans met the acceptance criteria. Significant differences were observed in the minimum and maximum doses to the PTV. The mean dose to the PTV was lower for PS (35.62 ± 0.26 vs. 37.18 ± 0.14; p = 0.002). Target coverage (D98\%) was better for IMPT (96.79\% vs. 99.10\%; p = 0.004). IMPT resulted in significantly lower mean doses to the rectum (16.75 CGE vs. 6.88 CGE; p = 0.004) and bladder (17.69 CGE vs. 5.98 CGE p = 0.002). High dose to the rectum (V36.25 CGE) were lower with PS, but not significantly opposite to high dose to the bladder. No significant differences were observed in mean conformity index values, with a non-significant trend towards higher mean homogeneity index values for PS. Non-significant differences in the gamma index for both fields were observed. These findings suggest that both PS and IMPT ultra-hypofractionated proton therapy for PCa are highly precise, offering good target coverage and sparing of normal tissues and OARs.},
   langid = {english}
+}
+
+@article{brataUserExperienceImprovement2020,
+  title = {User Experience Improvement of Japanese Language Mobile Learning Application through Mental Model and {{A}}/{{B}} Testing},
+  author = {Brata, Komang Candra and Brata, Adam Hendra},
+  date = {2020-06-01},
+  journaltitle = {International Journal of Electrical and Computer Engineering (IJECE)},
+  shortjournal = {IJECE},
+  volume = {10},
+  number = {3},
+  pages = {2659},
+  issn = {2088-8708, 2088-8708},
+  doi = {10.11591/ijece.v10i3.pp2659-2667},
+  url = {http://ijece.iaescore.com/index.php/IJECE/article/view/20880},
+  urldate = {2024-10-27},
+  abstract = {Advances in smartphone technology have led to the strong emergence of mobile learning (m-learning) on the market to support foreign language learning purposes, especially for the Japanese language. No matter what kind of m-learning application, their goal should help learners to learn the Japanese language independently. However, popular Japanese m-learning applications only accommodate on enhancing reading, vocabulary and writing ability so that user experience issues are still prevalent and may affect the learning outcome. In the context of user experience, usability is one of the essential factors in mobile application development to determine the level of the application’s user experience. In this paper, we advocate for a user experience improvement by using the mental model and A/B testing. The mental model is used to reflect the user’s inner thinking mode. A comparative approach was used to investigate the performance of 20 high-grade students with homogenous backgrounds and coursework. User experience level was measured based on the usability approach on pragmatic quality and hedonic quality like effectiveness (success rate of task completion), efficiency (task completion time) and satisfaction. The results then compared with an existing Japanese m-learning to gather the insight of improvement of our proposed method. Experimental results show that both m-learning versions proved can enhance learner performance in pragmatic attributes. Nevertheless, the study also reveals that an m-learning that employs the conversational mental model in the learning process is more valued by participants in hedonic qualities. Mean that the proposed m-learning which is developed with the mental model consideration and designed using A/B testing is able to provide conversational learning experience intuitively.}
 }
 
 @article{burnetDefiningTumourTarget2004,
@@ -411,6 +426,22 @@
   url = {https://www.nature.com/articles/s41598-020-64803-w},
   urldate = {2024-09-08},
   abstract = {Abstract             The Sørensen-Dice index (SDI) is a widely used measure for evaluating medical image segmentation algorithms. It offers a standardized measure of segmentation accuracy which has proven useful. However, it offers diminishing insight when the number of objects is unknown, such as in white matter lesion segmentation of multiple sclerosis (MS) patients. We present a refinement for finer grained parsing of SDI results in situations where the number of objects is unknown. We explore these ideas with two case studies showing what can be learned from our two presented studies. Our first study explores an inter-rater comparison, showing that smaller lesions cannot be reliably identified. In our second case study, we demonstrate fusing multiple MS lesion segmentation algorithms based on the insights into the algorithms provided by our analysis to generate a segmentation that exhibits improved performance. This work demonstrates the wealth of information that can be learned from refined analysis of medical image segmentations.},
+  langid = {english}
+}
+
+@article{chavezGuidelinesMicroComputed2021,
+  title = {Guidelines for {{Micro}}–{{Computed Tomography Analysis}} of {{Rodent Dentoalveolar Tissues}}},
+  author = {Chavez, Michael B and Chu, Emily Y and Kram, Vardit and De Castro, Luis F and Somerman, Martha J and Foster, Brian L},
+  date = {2021-03},
+  journaltitle = {JBMR Plus},
+  shortjournal = {JBMR Plus},
+  volume = {5},
+  number = {3},
+  issn = {2473-4039},
+  doi = {10.1002/jbm4.10474},
+  url = {https://academic.oup.com/jbmrplus/article/7499109},
+  urldate = {2024-10-28},
+  abstract = {ABSTRACT                            Micro–computed tomography (μCT) has become essential for analysis of mineralized as well as nonmineralized tissues and is therefore widely applicable in the life sciences. However, lack of standardized approaches and protocols for scanning, analyzing, and reporting data often makes it difficult to understand exactly how analyses were performed, how to interpret results, and if findings can be broadly compared with other models and studies. This problem is compounded in analysis of the dentoalveolar complex by the presence of four distinct mineralized tissues: enamel, dentin, cementum, and alveolar bone. Furthermore, these hard tissues interface with adjacent soft tissues, the dental pulp and periodontal ligament (PDL), making for a complex organ. Drawing on others' and our own experience analyzing rodent dentoalveolar tissues by μCT, we introduce techniques to successfully analyze dentoalveolar tissues with similar or disparate compositions, densities, and morphological characteristics. Our goal is to provide practical guidelines for μCT analysis of rodent dentoalveolar tissues, including approaches to optimize scan parameters (filters, voltage, voxel size, and integration time), reproducibly orient samples, define regions and volumes of interest, segment and subdivide tissues, interpret findings, and report methods and results. We include illustrative examples of analyses performed on genetically engineered mouse models with phenotypes in enamel, dentin, cementum, and alveolar bone. The recommendations are designed to increase transparency and reproducibility, promote best practices, and provide a basic framework to apply μCT analysis to the dentoalveolar complex that can also be extrapolated to a variety of other tissues of the body. © 2021 The Authors.               JBMR Plus               published by Wiley Periodicals LLC. on behalf of American Society for Bone and Mineral Research.},
   langid = {english}
 }
 
@@ -852,8 +883,7 @@
   location = {Upper Saddle River, NJ},
   isbn = {978-0-13-168728-8},
   langid = {english},
-  pagetotal = {954},
-  file = {/home/ro/Zotero/storage/GJZQXI7M/Gonzalez and Woods - 2007 - Digital image processing.pdf}
+  pagetotal = {954}
 }
 
 @incollection{gradyEnergyMinimizationApproach2006,
@@ -871,8 +901,7 @@
   doi = {10.1007/11866763_109},
   url = {http://link.springer.com/10.1007/11866763_109},
   urldate = {2024-10-06},
-  isbn = {978-3-540-44727-6},
-  file = {/home/ro/Zotero/storage/W74HRL8Z/Grady and Funka-Lea - 2006 - An Energy Minimization Approach to the Data Driven Editing of Presegmented ImagesVolumes.pdf}
+  isbn = {978-3-540-44727-6}
 }
 
 @article{greiweWearableTechnologyHow2020,
@@ -2220,6 +2249,22 @@
   date = {2022-09-27},
   url = {https://www.youtube.com/watch?v=710uQqIqsWk},
   urldate = {2024-09-13},
+  langid = {english}
+}
+
+@article{qureshiMedicalImageSegmentation2023,
+  title = {Medical Image Segmentation Using Deep Semantic-Based Methods: {{A}} Review of Techniques, Applications and Emerging Trends},
+  shorttitle = {Medical Image Segmentation Using Deep Semantic-Based Methods},
+  author = {Qureshi, Imran and Yan, Junhua and Abbas, Qaisar and Shaheed, Kashif and Riaz, Awais Bin and Wahid, Abdul and Khan, Muhammad Waseem Jan and Szczuko, Piotr},
+  date = {2023-02},
+  journaltitle = {Information Fusion},
+  shortjournal = {Information Fusion},
+  volume = {90},
+  pages = {316--352},
+  issn = {15662535},
+  doi = {10.1016/j.inffus.2022.09.031},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1566253522001695},
+  urldate = {2024-11-09},
   langid = {english}
 }
 
