--- a/includes/thesis/masterthesis-definitions.sty
+++ b/includes/thesis/masterthesis-definitions.sty
@@ -4,11 +4,13 @@
 \date{\today}
 
 \makeatletter
-\hypersetup{pdfinfo={
+\hypersetup{
+  pdfinfo={
   Title={\@title},
   Author={\@author},
   Subject={\thesissubject},
-  Keywords={\thesiskeywords}}
+  Keywords={\thesiskeywords}
+}
 }
 \makeatother
 
