--- a/includes/thesis/masterthesis-vars.sty
+++ b/includes/thesis/masterthesis-vars.sty
@@ -18,13 +18,5 @@
 \newcommand{\diatx}{Di\'{a}taxis}
 \newcommand{\good}{The Good Docs Project}
 \newcommand{\noTesters}{seven testers}
+\newcommand{\numberofTesters}{7}
 
-%\newcommand{\tb}{TextBlob}
-%\newcommand{\nb}{\ac{NB}}
-%\newcommand{\me}{\ac{ME}}
-%\newcommand{\svm}{\ac{SVM}}
-
-%\newcommand{\ftb}{$S_{TB}$}
-%\newcommand{\fnb}{$S_{NB}$}
-%\newcommand{\fme}{$S_{ME}$}
-%\newcommand{\fsvm}{$S_{SVM}$}
