--- a/includes/thesis/part02-chapter04-results.tex
+++ b/includes/thesis/part02-chapter04-results.tex
@@ -1,9 +1,8 @@
 %!TEX root = ../../thesis.tex
-%TODO replace quotes with italics
-\chapter{Results}\label{c:resuls}
+
+\chapter{Results}\label{c:results}
 Supervised segmentation evaluation was performed with the 3D Slicer extension \textit{SlicerRT}.
 Segmentation results of \noTesters, which did six segmentations each, have been analyzed.\\
-\textit{TODO: no statistical relevance}\\
 These 42 segmentations were compared to the reference segmentation via the \acrlong{dc} and \acrlong{hd}.
 Note that the \acrlong{dc} is a dimensionless score between 0 and 1.
 The testers had to perform the initial segmentation without the help of the guide on page \pageref{a:guide}.
