--- a/includes/thesis/part03-page1-appendix.tex
+++ b/includes/thesis/part03-page1-appendix.tex
@@ -6,11 +6,11 @@
 %\includepdf[pages=-]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
 \textbf{Appendix has been temporarily removed to reduce file size}
 
-\begin{figure}[h]
-	\centerline{
-		\includegraphics[scale=0.25]{images/dragons.jpg}}
-	\caption{Dragons}
-\end{figure}
+% \begin{figure}[h]
+% 	\centerline{
+% 		\includegraphics[scale=0.25]{images/dragons.jpg}}
+% 	\caption{Dragons}
+% \end{figure}
 
 
 % \chapter{Appendix B: Sentiment Analysis Python Script}
