--- a/includes/thesis/part02-chapter02-background.tex
+++ b/includes/thesis/part02-chapter02-background.tex
@@ -10,8 +10,10 @@
 This section is devoted to providing the theoretical background that was necessary for the study.
 This section is structured as follows:\\
 First and foremost, an introduction to the operating principle of a \mct\space will be provided in \cref{s:b-microct}.
-Secondly, \cref{s:guide-creation} will give an overview of the composition of a guide.
-Thirdly, an evaluation of the segmentation techniques and algorithms is given in \cref{s:b-segmentation-basics}.
+Secondly, \cref{s:guide-creation} will give an overview of the composition of a guide.\\
+Thirdly, an evaluation of the segmentation techniques and algorithms is given in \cref{s:b-segmentation-basics}.\\
+Fourth, an overview of possible digital representation methods of segmentations is given in \cref{s:b-seg-rep}.\\
+Fifth, possible segmentation evaluation methods are described in \cref{s:b-seg-eval}.\\
 Finally, \cref{s:b-mouse-anatomy} will provide a brief overview of the relevant anatomical structures of mice.
 
 
@@ -21,13 +23,12 @@ In comparison with clinical CT, \mct\space features high spatial resolution, whi
 
 
 \subsection{Operating principle}\label{s:b-mct-operation}
-\mct\space technology is based on the third-generation, or so-called ``rotate-rotate'' geometry of CT scanners \cite{flohrCTSystems2013}.
 The fundamental principle underlying clinical CT is that both the X-ray source and the detector rotate around the patient table as part of a gantry assembly simultaneously \cite{flohrCTSystems2013}.
 A visual representation of this concept can be seen in \cref{fig:3ct}.
 \begin{figure}[h]
 	\centerline{
 		\includegraphics[scale=0.5]{images/ct.png}}
-	\caption{Third generation CT basic setup \cite{fdaDrawingCTFan2019}}\label{fig:3ct}
+	\caption{Clinical CT basic setup \cite{fdaDrawingCTFan2019}}\label{fig:3ct}
 \end{figure}
 
 \noindent
@@ -43,7 +44,7 @@ For reference, see \cref{fig:mct}.
 
 \noindent
 Micro-CT X-ray sources typically utilize a fixed tungsten anode
- and therefore are required to operate at lower voltage and current in comparison to the rotating anode employed in clinical CT.
+and therefore are required to operate at lower voltage and current in comparison to the rotating anode employed in clinical CT.
 The achievable tube voltage is limited to a range between 20 and 100\acrshort{kv} and a current range spanning from 0.05 to 1mA.
 \begin{equation}\label{eqn:intensity-proportionality}
 	I \propto (kV)^{2}*(mA)
@@ -83,17 +84,16 @@ Once all needed projections, as shown in \cref{fig:ct-projections}, are performe
 A single projection can be described as a radiograph, which represents the intensity of the object at a particular angle \cite{liMicrocomputedTomographySmall2008,orhanMicrocomputedTomographyMicroCT2020}.
 The radiographs differentiate either 65,536 (16-\gls{bit}) grey values or 256 (8-\gls{bit}) grey values, which are directly related to the X-ray absorption \cite{liMicrocomputedTomographySmall2008,orhanMicrocomputedTomographyMicroCT2020}.
 To convert these two-dimensional radiographs into a three-dimensional dataset, the application of a reconstruction algorithm is required.
-Multiple reconstruction methods exist, such as fourier or fast fourier, filtered back projection and iterative methods \cite{liMicrocomputedTomographySmall2008,orhanMicrocomputedTomographyMicroCT2020}.
-Before any reconstruction algorithm can be utilized, the data needs to be preprocessed.
+Before any reconstruction algorithm can be utilized, however, the data needs to be preprocessed.
 This step compensates for factors such as detector response heterogeneity, defective pixels, X-ray intensity drift and electronic noise \cite{liMicrocomputedTomographySmall2008}.
 Next, the reconstruction algorithm can be applied.
 As mentioned above, there exist a multitude of reconstructed algorithms, however,
 the most widely used algorithm in \mct\space is the \acrfull{fbp}.
 Specifically, the \acrfull{fdk}, which is well suited for \mct\space because of its simplicity
 and ability to handle data truncation in the z-axis or longitudinal direction \cite{liMicrocomputedTomographySmall2008,orhanMicrocomputedTomographyMicroCT2020}.
-Building upon these simple algorithms are iterative algorithms like the \gls{isra} and \gls{isratv},
+Building upon the forward- and back-projection of these simple algorithms are iterative algorithms like the \gls{isra} and \gls{isratv},
 which were utilized to reconstruct the datasets used in this study (see: \cref{tab:scan-parameters}).
-As can be seen in \cref{fig:isra}, this algorithm starts off by performing a \acrshort{fbp} (bottom right \cref{fig:isra}) and storing the result.
+As can be seen in \cref{fig:isra}, this algorithm starts off by performing a forward-projection (bottom right \cref{fig:isra}) and storing the result.
 Next, the current image is forward and back-projected to get an estimation image,
 which then serves to calculate the error ratio between the estimation and the measured data.
 The error is then considered in the next iteration of forward and back-projection to update the estimated image.
@@ -154,7 +154,6 @@ While most soft tissues have a \acrshort{hu} value between $-100$ and $+100$ \ci
 This section is intended to give a rudimentary overview of two commonly used frameworks in software documentation.
 
 
-
 \subsection{\good}\label{s:b-gooddocs}
 \begin{displayquote}[\cite{shorterGoodDocsProject2024}]
 	``The Good Docs Project educates and empowers people to create high-quality documentation by providing them with templates, resources, best practices, and tools to enhance their documentation in open source and beyond.''
@@ -170,20 +169,13 @@ The beginner might represent an ordinary customer or user of some software or te
 The intermediate might be a system administrator of said product
 and the expert could be a support person.
 The documentation author should now, come up with several problems each fictional reader would try to solve with the help of documentation \cite{shorterGoodDocsProject2024}.
-\begin{figure}[h]
-	\centerline{
-		\includegraphics[scale=0.5]{images/gd_dt.png}}
-	\caption{\good\space critical paths decision table \cite{shorterGoodDocsProject2024}}\label{fig:dg-dt}
-\end{figure}
-
-\noindent
-Furthermore, the author is supposed to compose a table similar to \cref{fig:dg-dt} and score the likeliness each reader is
+Furthermore, the author is supposed to compose a table and score the likeliness each reader is
 going to use the documentation to complete the task.
-The score ranges from 1, which is the lowest likelihood, to 3m which is the highest likelihood.
+The score ranges from 1, which is the lowest likelihood, to 3 which is the highest likelihood.
 Next, the author needs to sum up each row.
-The resulting ``Critical Path Score'' is then intended to give the author insight about the importance of different documentation
+The resulting \textit{Critical Path Score} is then intended to give the author insight about the importance of different documentation
 content \cite{shorterGoodDocsProject2024}.
-``Critical Path Score'' ranges from 3\footnote{3 readers, each with a likelihood of 1. $3*1=3$},
+\textit{Critical Path Score} ranges from 3\footnote{3 readers, each with a likelihood of 1. $3*1=3$},
 which is the lowest importance to the highest importance of 9\footnote{3 readers, each with a likelihood of 3. $3*3=9$}.
 Finally, based on all the information gathered in the process explained above, the author is instructed to choose the appropriate template provided by \good\space \cite{shorterGoodDocsProject2024}.\\
 The following compressed list provides an overview of the available templates in the current edition of \good\space version 1.2.0:
@@ -209,9 +201,11 @@ The following compressed list provides an overview of the available templates in
 
 
 \subsection{\diatx}\label{s:diataxis}
-The ``\diatx\space documentation framework'' by Daniele Procida \cite{procidaDiataxisDocumentationFramework2023,aghajaniSoftwareDocumentationPractitioners2020}
+The \textit{\diatx\space documentation framework} by Daniele Procida \cite{procidaDiataxisDocumentationFramework2023,aghajaniSoftwareDocumentationPractitioners2020}
 is extensively used for technical documentation by software projects like NumPy \cite{harrisArrayProgrammingNumPy2020}, Django \cite{Django2013} and large companies like Canonical (Canonical Limited, Douglas, Isle of Man) and Cloudflare (Cloudflare, Inc., San Francisco, California, U.S.A.).
 \diatx\space bases itself on four basic concepts to divide documentation into four different types with different structures according to their goals.\\
+
+
 \begin{figure}
 	\begin{center}
 		\begin{tikzpicture}
@@ -232,9 +226,10 @@ is extensively used for technical documentation by software projects like NumPy 
 	\caption{\diatx\space Foundations \cite{procidaDiataxisDocumentationFramework2023}}\label{fig:diataxis-foundation}
 \end{figure}
 
+
 \noindent
 As can be seen in \cref{fig:diataxis-foundation}, the documentation author first ought to decide which scale their documentation applies to.
-As the target audience may be interested in practical or theoretical knowledge, the documentation author traces the y-axis of \cref{fig:diataxis-foundation} in a positive or negative direction.
+The target audience may be interested in practical or theoretical knowledge, the documentation author traces the y-axis of \cref{fig:diataxis-foundation} in a positive or negative direction.
 \citeauthor{procidaDiataxisDocumentationFramework2023} then instructs documentation authors to decide if their target audience is interested in documentation that either serves further study or leads to directly applicable practical knowledge.
 Documentation authors should therefore trace the x-axis of \cref{fig:diataxis-foundation} in a positive or negative direction, finally arriving at the type of documentation they should compose for the task at hand \cite{procidaPythonDocsCommunity2022}.
 \citeauthor{procidaDiataxisDocumentationFramework2023} explains the purpose of his four types of documentation as follows:
@@ -247,7 +242,14 @@ Documentation authors should therefore trace the x-axis of \cref{fig:diataxis-fo
 Additionally, \citeauthor{procidaDiataxisDocumentationFramework2023} mentions that these types do not pose hard limits on what documentation can contain. They are rather meant to remind the author about the needs of users.
 According to these criteria the guides practical section is based on \citeauthor{procidaDiataxisDocumentationFramework2023}s structure for How-to guides, and its theoretical section is based on his structure for Explanation style documentation.
 
-\subsubsection*{How-to guide} %TODO: fix size and numbering
+\subsubsection*{Tutorial}
+A tutorial should be interpreted as a practical activity according to \citeauthor{procidaDiataxisDocumentationFramework2023}.
+It aids the user in acquiring skills and knowledge by performing a meaningful and achievable task.
+Tutorials should therefore be seen as lessons.
+Whereby, what a student does will not directly relate to what they will learn.
+Instead they are meant to learn theoretical knowledge i.e. how things relate and interact and by extension also how to interact with them \cite{procidaPythonDocsCommunity2022,procidaDiataxisDocumentationFramework2023}.
+
+\subsubsection*{How-to guide}
 \citeauthor{procidaDiataxisDocumentationFramework2023} implores that How-to guides need to have practical utility and a clear objective.
 They can only serve an already competent user.
 Thus, on page \pageref{a:guide} the guide has explanations about the basic usage of 3D Slicer and its tools before instructing the user to follow a segmentation method themselves.
@@ -270,7 +272,7 @@ Although, reference material should not imply how to perform tasks, it should ho
 \subsection{Pictograms}\label{s:b-pictograms}
 The guide, which can be seen on page \pageref{a:guide}, makes extensive use of pictograms to inform the reader about common errors,
 pitfalls to avoid, warning about resource-intensive operations, and whether a tool is only available via an add-on.
-Inspiration for this kind of visual communication was taken from books published by O'Reilly (O'Reilly Media, Inc., Sebastopol, California, U.S.A.), specifically ``Linux observability with \acrshort{bpf}: advanced programming for performance analysis and networking'' by David Calavera and Lorenzo Fontana \cite{calaveraLinuxObservabilityBPF2019}.
+Inspiration for this kind of visual communication was taken from books published by O'Reilly (O'Reilly Media, Inc., Sebastopol, California, U.S.A.), specifically \textit{Linux observability with \acrshort{bpf}: advanced programming for performance analysis and networking} by David Calavera and Lorenzo Fontana \cite{calaveraLinuxObservabilityBPF2019}.
 Pictograms are stylized drawings that are supposed to represent familiar objects, ideas or abstract concepts to the reader \cite{dowsePharmacistsAreWords2021}.
 In health information documents, they have been proven to enhance the readability, attractiveness and visual attention of the target audience \cite{houtsRolePicturesImproving2006,mansoorEffectPictogramsReadability2003}.\\
 
@@ -284,6 +286,8 @@ As it is a requirement for visualization of target structures, like a tumor, or 
 segmentation is a well-established procedure in medical image computing \cite{pinterPolymorphSegmentationRepresentation2019,slicercommunity3DSlicerImage2022}.
 
 \subsection{AI based}\label{s:b-seg-ai}
+AI based image segmentation methods play an essential part in medical imaging analysis and improves the diagnostic process \cite{qureshiMedicalImageSegmentation2023}.
+Generally AI based image segmentation methods can be categorized into three groups.
 % images: https://sci-hub.ru/https://doi.org/10.1016/j.neucom.2019.11.118
 
 \subsubsection{Semantic segmentation}
@@ -315,8 +319,7 @@ thus Differentiating between instances of the same class and performing an exact
 \begin{displayquote}[\cite{gradyEnergyMinimizationApproach2006}]
 	``Fully automatic, completely reliable segmentation in medical images is an unrealistic expectation [\ldots]''
 \end{displayquote}
-Thus, many clinical and preclinical segmentation workflows still rely on classical segmentation tools.
-% according to \cite{yuTechniquesChallengesImage2023}
+Thus, many clinical and preclinical segmentation workflows still rely on classical segmentation tools \cite{yuTechniquesChallengesImage2023}.
 % better: https://www.v7labs.com/blog/image-segmentation-guide#h4
 % https://armanasq.github.io/computer-vision/image-segementation/#1-traditional-methods
 \begin{figure}[h]
@@ -369,6 +372,7 @@ Row B, however, displays less of a steep gradient and will thus result in less a
 	\centerline{\includegraphics[scale=0.5]{images/edgeModel.png}}
 	\caption{Image intensity functions: step and ramp \cite{gonzalezDigitalImageProcessing2007}}\label{fig:iif}
 \end{figure}
+
 \noindent
 Conceptually, the image intensity function describes changes in intensity.
 Wherever the image intensity transitions from one value to another,
@@ -380,8 +384,8 @@ can be categorized into two types of techniques based on the order of derivation
 	\centerline{\includegraphics[scale=0.5]{images/edgeModelOrders.png}}
 	\caption{Image intensity function derivatives: first, second and zero crossing \cite{gonzalezDigitalImageProcessing2007}}\label{fig:iifO}
 \end{figure}
-\noindent
 
+\noindent
 \subsubsection*{First order derivative}
 The first derivative of an image intensity function, or horizontal intensity profile,
 measures the rate of change of pixel intensity (see: \cref{fig:iifO}).
@@ -423,7 +427,7 @@ To conclude, the edge detection workflow using the Sobel kernels is as follows:
 \subsubsection*{Second order derivative}
 The second derivative measures the rate of change of the first derivative.
 This technique analyzes the second order derivative of an image intensity function, or horizontal intensity profile,
-and look for so-called ``zero crossings''.
+and look for so-called \textit{zero crossings}.
 These zero crossings are defined as points where the second order derivative changes signs,
 in other words, it goes from negative to positive, or vice versa.
 Zero crossings therefore indicate the presence of edges in the rate of change of image intensity \cite{gonzalezDigitalImageProcessing2007}.
@@ -450,6 +454,7 @@ To conclude, the edge detection workflow using the Laplacian kernel is as follow
 	\centerline{\includegraphics[scale=0.5]{images/regionGrowing.png}}
 	\caption{Region growing seeds and result \cite{pandyaExploringImageSegmentation2024}}\label{fig:rgSR}
 \end{figure}
+
 \noindent
 Region growing breaks down images into separate areas by grouping areas by their similarity.
 This is done by creating a selection of $n$ seed pixels $S$, choosing some sort of principle of similarity
@@ -590,12 +595,12 @@ In \cref{fig:kmeans2} the seed points have been relocated to better fit the data
 % https://medium.com/codex/watershed-segmentation-locate-individual-objects-when-heavily-clustered-b07bb1dbc0f6
 % https://sci-hub.ru/https://doi.org/10.1016/B978-0-12-415873-3.00004-3
 The watershed algorithm treats pixel intensities as elevations in a virtual landscape.
-In the latter, local minima are seen as the seed for ``catchment basins''.
-On the other hand, local maxima, or so-called ``watersheds'' separate the basins from each other (see: \cref{fig:water1}).
-By ``filling the basins with water'' each pixel in an image is either assigned to a region or a watershed.
+In the latter, local minima are seen as the seed for \textit{catchment basins}.
+On the other hand, local maxima, or so-called \textit{watersheds} separate the basins from each other (see: \cref{fig:water1}).
+By \textit{filling the basins with water} each pixel in an image is either assigned to a region or a watershed.
 Finally, by modifying the water height, which in practice equates to a threshold value,
 the watershed algorithm can be adjusted to either create larger or smaller regions (see: \cref{fig:water2}).
-If the merging of two regions is to be avoided, an additional watershed, called ``dams'',
+If the merging of two regions is to be avoided, an additional watershed, called \textit{dams},
 can be placed between them \cite{preimImageAnalysisMedical2014,hahnIWTinteractiveWatershedTransform2003}.
 \begin{figure}[h!]
 	\begin{subfigure}{0.49\textwidth}
@@ -612,7 +617,7 @@ can be placed between them \cite{preimImageAnalysisMedical2014,hahnIWTinteractiv
 \end{figure}
 
 
-\section{Segmentation representation}
+\section{Segmentation representation}\label{s:b-seg-rep}
 \begin{figure}[h]
 	\centerline{
 		\includegraphics[scale=0.5]{images/segRep.png}}
@@ -632,11 +637,8 @@ As for the next step, these binary labelmaps are used to compute dose distributi
 If a workflow requires 3D visualization, closed surfaces must be constructed, this can be done by converting,
 using either planar contours or binary labelmaps as the source dataset \cite{pinterPolymorphSegmentationRepresentation2019}.\\
 The following sections should give a short overview of the mentioned data structures and their use cases.
-
-% https://pdf.sciencedirectassets.com/276826/1-s2.0-S1002007108X00061/1-s2.0-S1002007108000658/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEIH%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJGMEQCIC0651E8f8wYnatuSWoH5B6QUXpJl5MbGRvWCkKGH3eIAiBvnyYEsTNrvIQIGrGVLvmFluaWtP7WINLlnbDCpX46xSq8BQi5%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F8BEAUaDDA1OTAwMzU0Njg2NSIM1STppGJCBYoUEBeVKpAFWAcGFyUcG0btJR%2FneE3O%2BBlTxy7E5ofkZHmqUQwnBVCsLpchDXvIfS1JRiLoVLZiyut6RbzSQ1yXcHQVTGvXSkrIXaFJLUgzlOV2P5cA0z9otXoyMxNKJe9b3M5%2Bri6HwsjS2tecJoVGp9I%2Fxt5Vto%2B%2BW9l6a%2B6mikvKuxRzl1A5ymZbAXBeweI3NOXYN%2F0mGMzxLCe5LZKPlleOf6PhI%2B%2Fn38ROevhlXMzKa7lBUNQrmxUY5PItKNCVCqpGOx8iaHxVwbA%2BvqDdjIgE1gWp57P4Ws0QQQWzjEFPkr%2FQtc%2F5QW5zYun9A59QfK0rzVYYifEXXwILRVPdIJnObDY0t8zkqON%2F%2FbETulttNw7QtMG%2FyXxPkP2cbZXFPg28T%2BdBEAXQpPR7aRqyhZwCS5%2FiO%2BFvdO0U59U9bJFKWxbf%2BrRbCzSCCjIQhbu85L8Iaw7mW9KqFlDbxjFsjn1gofo7YAaG7FkBZrto%2BtdicJU3VQu01UrUMXuYDHr6iuFiwpBVIspyaTnq0xkBMz8uD4mniBMfTszP%2FGpobudWY2PT9Aiq2peJN%2FKSr%2FqfpA3iQoJIuTxvlAlEXTDmQSUW7JLuQWakWZagmARMJM8BMPMJZyGRd1yvW%2Ba97uUq8C874DWzhJtC3bnHl1bs0sCt5kXy9wgR%2Fc7juoY6ww76MjVPj9PRXXSsNPIgm64srDQIpk791E8PX%2B2osKa3HTxi82IrSaBjFdd3%2F0t%2FqbUol5MlvZCDiQDuJZuMIIE12ZNf9zViJOAc2twSKTH6esVAD8tquVviw9Y16yfmo6E56J%2BBvPuDqD9xLSkVsKbMIngZtGjvxZr9NYWUuDzs3yZqLnzWD7N9Zx2xQvgkgrqLqRLSTo0w18TEtwY6sgFg2sYrBVEID6iQHkMLCCHBShdm0l0WNHPr%2FVBXRSU2aHYR8wp7pP9IjKVw3IPSSCCz4i2Mbc%2BYSpTvjEch5dhv5%2FyVMG%2Fp0hIpijQTajDlXOCIb4hiEzk5L2ar77cZfxUSNJfCM7srS7gCzG0K5ZYZAEf29r16H85UcDMyejTA1FvEQGJ%2B3KnYr1gy0DzAy7gB5C%2F%2Fjf7gh%2BvbMFv0Xtv%2FKvrCWMnV2Jzyyu6ndkg%2BHlZU&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240923T084001Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYV3XLASKH%2F20240923%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=e8cf422cc462ca2f9cc477cbdea04e2e7c981543eec928e444da7d58b9d58564&hash=297d50f9d1f50c00ae81b7c033038ede324643f9d36bd7eb5099a63fd99c4816&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S1002007108000658&tid=spdf-f0276a20-ff46-4f00-a9af-e2bccba738f8&sid=b1fc4ae88be0f942df7a2d8859741e612e47gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=1b125f02555f530f530257&rr=8c793a3f998ac2aa&cc=at
 % https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0068449&type=printable
 % https://sci-hub.st/10.1007/978-3-030-16641-0
-
 
 \subsection{Binary labelmap}\label{s:b-binary-labelmap}
 Binary labelmaps (see: \cref{fig:segRep}/A) are the most common representation, as they have several benefits for segmentation software developers.
@@ -651,11 +653,9 @@ thus binary labelmaps tend to be memory inefficient for overlapping structures \
 	\begin{minted}{text}
 label, X, Y, Z
 [...]
-1, 0.23563218390804597, 0.13218390804597702, 0.27586206896551724
 0, 0.09051724137931035, 0.28304597701149425, 0.1810344827586207
-5, 0.03879310344827586, 0.27873563218390807, 0.07758620689655173
+1, 0.23563218390804597, 0.13218390804597702, 0.27586206896551724
 5, 0.1896551724137931, 0.40804597701149425, 0.16666666666666666
-2, 0.1997126436781609, 0.5014367816091954, 0.1781609195402299
 [...]
 \end{minted}
 	\caption{sample binary labelmap 3D array}\label{fig:binary-array}
@@ -710,11 +710,11 @@ with the second corner on positions $y=1$ and $z=1$.
 	\end{subfigure}
 	\begin{subfigure}{0.49\textwidth}
 		\begin{verbatim}
-			facet normal 0.000000 0.000000 1.000000
+			facet normal 0.000 0.000 1.000
 			[...]
-			  vertex -1.000000 -1.000000 1.000000
-			  vertex 1.000000 1.000000 1.000000
-			  vertex -1.000000 1.000000 1.000000
+			  vertex -1.000 -1.000 1.000
+			  vertex  1.000  1.000 1.000
+			  vertex -1.000  1.000 1.000
 			[...]
 		\end{verbatim}
 		\caption{Closed surface mesh sample}\label{fig:surfacemesh}
@@ -732,7 +732,7 @@ This in turn results in a representation like in \cref{fig:spineMesh}.
 % https://sci-hub.ru/https://doi.org/10.1007/978-3-540-88693-8_43
 \begin{figure}[h]
 	\centerline{
-		\includegraphics[scale=0.4]{images/spineMesh.png}}
+		\includegraphics[scale=0.355]{images/spineMesh.png}}
 	\caption{Closed surface mesh of a mouse vertebrae segmentation}\label{fig:spineMesh}
 \end{figure}
 
@@ -754,19 +754,19 @@ The final volume is then smoothed.
 \begin{figure}[h]
 	\begin{subfigure}{0.49\textwidth}
 		\includegraphics[scale=0.5]{images/planarContours.png}
-		\caption{Planar contours outlining structures of interest \cite{weinsteinScanlineSurfacingBuilding2000}}\label{fig:planarContoursLines}
+		\caption{Planar contours outlining structures of interest}\label{fig:planarContoursLines}
 	\end{subfigure}
 	\begin{subfigure}{0.49\textwidth}
 		\includegraphics[scale=0.5]{images/planarContoursRecon.png}
-		\caption{Reconstructed surfaces from planar contours \cite{weinsteinScanlineSurfacingBuilding2000}}\label{fig:planarRec}
+		\caption{Reconstructed surfaces from planar contours}\label{fig:planarRec}
 	\end{subfigure}
-	\caption{Planar contour representation}\label{fig:planarContours}
+	\caption{Planar contour representation \cite{weinsteinScanlineSurfacingBuilding2000}}\label{fig:planarContours}
 \end{figure}
 
 \noindent
 As can be seen in \cref{fig:planarContoursLines} planar contours or ribbons can be highly accurate in 2D.
 Experts can also draw polylines regardless of noise, low-resolution data, and overlapping pathologies.
-Furthermore, for radiation therapy, the \gls{dicom} standard requires segmentations to be stored as ``structured sets'',
+Furthermore, for radiation therapy, the \gls{dicom} standard requires segmentations to be stored as \textit{structured sets},
 essentially a series of planar contours.
 However, when it comes to 3D visualization, planar contours as well as ribbons offer comparatively poor quality visuals \cite{pinterPolymorphSegmentationRepresentation2019,weinsteinScanlineSurfacingBuilding2000}.
 
@@ -791,7 +791,7 @@ It is two times the \acrfull{tp} intersection divided by two times the \acrlong{
 In the context of volume comparison, this can be interpreted as two times the number of overlapping \glspl{vx} between two segmentations divided by the total number of \glspl{vx} in both segmentations \cite{schelbComparisonProstateMRI2021}.\\
 
 \subsection{Pompeiu-Hausdorff Distance}
-The ``Pompeiu–Hausdorff distance'' or simply ``Hausdorff distance'' is named after its creators Felix Hausdorff and Dimitrie Pompeiu \cite{birsanOneHundredYears2006}.
+The \textit{Pompeiu–Hausdorff distance} or simply \textit{Hausdorff distance} is named after its creators Felix Hausdorff and Dimitrie Pompeiu \cite{birsanOneHundredYears2006}.
 \begin{displayquote}[\cite{simBrainVentricleDetection2016}]
 	``[\ldots] it is able to measure the degree of mismatch between two sets from the distance of the point of A that is farthest from any point of B, and vice versa.''
 \end{displayquote}
@@ -823,7 +823,7 @@ To conclude, the algorithm works by iterating over the following steps \cite{hau
 
 \section{Mouse bone anatomy}\label{s:b-mouse-anatomy}
 This section is dedicated to the bone anatomy of laboratory mice (Mus musculus) (see: \cref{fig:mouseFull}).
-Apart from the obvious size difference, mice are biologically very comparable to humans (Homo sapiens),
+Apart from the obvious size difference, mice are biologically comparable to humans (Homo sapiens),
 notable differences between human and mouse bone anatomy will be pointed out \cite{ruberteBridgingMouseHuman2023}.
 \begin{figure}[h]
 	\centerline{
@@ -865,7 +865,7 @@ The remainder is due to minor differences in thoracic, lumbar and sacral vertebr
 Rodent and human vertebrae additionally differ in vertebral body size.
 \begin{figure}[h]
 	\centerline{
-		\includegraphics[scale=0.7]{images/mouseSpine.png}}
+		\includegraphics[scale=0.6]{images/mouseSpine.png}}
 	\caption{Mouse spine X-ray and \acrshort{mri} \cite{harrisonVertebralLandmarksIdentification2013}}\label{fig:mouseSpine}
 \end{figure}
 
