--- a/includes/thesis/part02-chapter05-conclusion.tex
+++ b/includes/thesis/part02-chapter05-conclusion.tex
@@ -1,183 +1,198 @@
 %!TEX root = ../../thesis.tex
 
+\chapter{Discussion}\label{c:discussion}
+This chapter provides an overview of the relevance and interpretation of the results in \cref{c:results}.
+However, due to the fact that this study has a small number of participants (n=\numberofTesters),
+it has to be noted that a statistical significance of the results has not achieved.\\
+\Cref{c:limitations} shows limitations and shortcomings of this study.
+Furthermore, \cref{c:conclusion} provides a final conclusion of the topics covered by this thesis.\\
+Finally, \cref{c:future} discusses possible future research.\\
+
+\noindent
+% \section{Evaluation: \acrlong{dc}}
+The \acrfull{dc} which effectively describes the relative overlap of 2 segments showed an improvement for 15 out of 21 (3 segments * 7 testers) (71.43\%) segmentations.\\ %\section{Evaluation: \acrlong{hd}}
+The \acrfull{hd}, which effectively describes the absolute distance between two segments showed the following improvements:\\
+Maximum distance:\\
+17 out of 21 (80.95\%)\\
+Average distance:\\
+14 out of 21 (66.66\%)
+
+\section{Segmentation evaluation: Scapula}
+Scapula segmentation after reading the guide improved for testers:
+2, 3, 4, 5, 6, 7
+Got worse for testers:
+1
+Six out of seven testers seem to have benefited from reading the guide when tasked with segmenting a mouse scapula.
+Improvements according to the \glsxtrlong{dc} were as follows:\\
+-0.17, 0.45, 0.11, 0.02, 0.31, 0.09, 0.14 -> mean: 0.1357 -> +13.57\% (more overlap)\\
+\begin{table}[ht]
+	\begin{center}
+		\begin{tabular}{l l}
+			\textbf{Test person} & \textbf{overlap (\%)} \\
+			\hline
+			1                    & $-17$                 \\
+			2                    & $45$                  \\
+			3                    & $11$                  \\
+			4                    & $2$                   \\
+			5                    & $31$                  \\
+			6                    & $9$                   \\
+			7                    & $14$                  \\
+			\hline
+			Average              & $13.57$               \\
+		\end{tabular}
+		\caption{Evaluation: \acrshort{dc} scaplula}\label{tab:scapula-overlap}
+	\end{center}
+\end{table}
+
+\noindent
+Average improvements according to the \glsxtrlong{hd} were as follows:\\
+0.1155, 0.39, -0.1, -0.0084, -9.37, -0.0365, -0.15 -> mean: -1.3085mm (less distance)
+\begin{table}[ht]
+	\begin{center}
+		\begin{tabular}{l l}
+			\textbf{Test person} & \textbf{distance ($mm$)} \\
+			\hline
+			1                    & $0.1155$                 \\
+			2                    & $0.39$                   \\
+			3                    & $-0.1$                   \\
+			4                    & $-0.0084$                \\
+			5                    & $-9.37$                  \\
+			6                    & $-0.0365$                \\
+			7                    & $-0.15$                  \\
+			\hline
+			Average              & $-1.3085$                \\
+		\end{tabular}
+		\caption{Evaluation: \acrshort{hd} scaplula}\label{tab:scapula-distance}
+	\end{center}
+\end{table}
+
+
+\section{Segmentation evaluation: Clavicle}
+Clavicle segmentation after reading the guide improved for testers:
+2, 4, 5, 6, 7
+Got worse for testers:
+1, 3
+Improvements according to the \glsxtrlong{dc} were as follows:\\
+-0.05, 0.32, -0.01, 0.01, 0.7478, 0.14, 0.09 -> mean: 0.1782 -> 17.82\%\\
+\begin{table}[ht]
+	\begin{center}
+		\begin{tabular}{l l}
+			\textbf{Test person} & \textbf{overlap (\%)} \\
+			\hline
+			1                    & $-5$                  \\
+			2                    & $32$                  \\
+			3                    & $-1$                  \\
+			4                    & $1$                   \\
+			5                    & $74.78$               \\
+			6                    & $14$                  \\
+			7                    & $9$                   \\
+			\hline
+			Average              & $17.82$               \\
+		\end{tabular}
+		\caption{Evaluation: \acrshort{dc} clavicle}\label{tab:clavicle-overlap}
+	\end{center}
+\end{table}
+
+\noindent
+Average improvements according to the \glsxtrlong{hd} were as follows:\\
+0.027, 0.3, 0.04, -0.0042, -7.4751, -0.0615, -0.0318 -> mean: -1.02937mm
+\begin{table}[ht]
+	\begin{center}
+		\begin{tabular}{l l}
+			\textbf{Test person} & \textbf{distance ($mm$)} \\
+			\hline
+			1                    & $0.027$                  \\
+			2                    & $0.3$                    \\
+			3                    & $0.04$                   \\
+			4                    & $-0.0042$                \\
+			5                    & $-7.4751$                \\
+			6                    & $-0.0615$                \\
+			7                    & $-0.0318$                \\
+			\hline
+			Average              & $-1.02937$               \\
+		\end{tabular}
+		\caption{Evaluation: \acrshort{hd} clavicle}\label{tab:clavicle-distance}
+	\end{center}
+\end{table}
+
+
+
+\section{Segmentation evaluation: Humerus}
+Clavicle segmentation after reading the guide improved for testers:
+1, 2, 4, 5, 6, 7
+Got worse for testers:
+3
+Improvements according to the \glsxtrlong{dc} were as follows:\\
+-0.05, 0.69, -0.03, 0, 0.52, 0.08, 0.03 -> mean: 0.1771 -> 17.71\%\\
+\begin{table}[ht]
+	\begin{center}
+		\begin{tabular}{l l}
+			\textbf{Test person} & \textbf{overlap (\%)} \\
+			\hline
+			1                    & $-5$                  \\
+			2                    & $69$                  \\
+			3                    & $-3$                  \\
+			4                    & $0$                   \\
+			5                    & $52$                  \\
+			6                    & $8$                   \\
+			7                    & $3$                   \\
+			\hline
+			Average              & $17.71$               \\
+		\end{tabular}
+		\caption{Evaluation: \acrshort{dc} humerus}\label{tab:humerus-overlap}
+	\end{center}
+\end{table}
+
+\noindent
+Average improvements according to the \glsxtrlong{hd} were as follows:\\
+-0.17, 0.07, 0.0069, -0.0168, -16.4959, -0.0528, -0.0156 -> mean: -2.382mm
+\begin{table}[ht]
+	\begin{center}
+		\begin{tabular}{l l}
+			\textbf{Test person} & \textbf{distance ($mm$)} \\
+			\hline
+			1                    & $-0.17$                  \\
+			2                    & $0.07$                   \\
+			3                    & $0.0069$                 \\
+			4                    & $-0.0168$                \\
+			5                    & $-16.4959$               \\
+			6                    & $-0.0528$                \\
+			7                    & $-0.0156$                \\
+			\hline
+			Average              & $-2.382$                 \\
+		\end{tabular}
+		\caption{Evaluation: \acrshort{hd} humerus}\label{tab:humerus-distance}
+	\end{center}
+\end{table}
+
+
+
+\section{Limitations}\label{c:limitations}
+
 \chapter{Conclusion}\label{c:conclusion}
+The main goal of this thesis was to determine, whether inexperienced people facing a \mct\space segmentation task benefit from reading a guide beforehand.
+This is relevant because segmentation is an important step in quantitative image analysis studies.
+Giving researchers a head start in segmentation tasks would likely improve segmentation speed and accuracy.
+In this study, a guide, describing segmentation of mouse bone anatomy in \mct\space datsets, was created.
+The guide was handed out to testers with the task of performing segmentation without any help from the guide on 3 bones.
+And then repeating the task on the contralateral side with the help of the guide.
+The resulting segmentations were compared to a gold standard segmentation and analyzed.
+Due to the small sample size, it was not possible to show a significant statistical improvement of segmentations.
+However, the results indicate, that if this experiment were to be repeated with a large number of testers, segmentation accuracy improvements would be evident.
+In conclusion, this thesis failed to show statistical significant improvements due to a small sample size.
+Future research could however, reliably answer the research question of whether the usage of a segmentation guide improves segmentation quality when used by inexperienced people.
 
-% This final section provides a short summary of literature research, analysis and comparison in \cref{s:conclusions-summary}.
-% \Cref{s:conclusions-discussion} critically discusses the results and shows limitations and shortcomings.
-% Finally, \cref{s:conclusions-future} provides possible future research topics.
 
-\section{Summary of Results}
-\label{s:conclusions-summary}
-
-% The central research question stated in \cref{s:introduction-researchgoals} was: \emph{To what extent can stock market movements be explained by the public opinion extracted from Twitter?}
-
-% The evaluation shows that the best results are achieved by using all tweets (no tweets omitted), \svm{} or \nb{} classifiers and a lag between five and nine days.
-
-% In the following all defined research goals in \cref{s:introduction-researchgoals} on page \pageref{s:introduction-researchgoals} will be recalled and explained how they were met.
-% Each research goal is stated and a short summary of the results is given in each subsection.
-
-% research goals
-
-%\subsection{G1 - Determine Companies, Keywords and Stock Symbols to Analyze}
-%\label{ss:conclusion-summary-g1}
-
-% \item \textbf{G1-Q1} - Which companies should be analyzed?
-% \item \textbf{G1-Q2} - Which keywords should be used to find corresponding tweets?
-% \item \textbf{G1-Q3} - Which company uses which stock symbol in order to retrieve share prices?
-
-% The research goal 1 has been examined in \cref{s:casestudy-companieskeywords} (see page \pageref{s:casestudy-companieskeywords}).
-% In the following a short summary is given.
-% First the question which companies should be analyzed must be answered.
-% In literature there were many references to automotive companies and therefore the decision has been made to analyze these companies.
-% To find the companies to be analyzed the five biggest car manufacturing companies have been selected.
-% This selection has been made based on the survey \emph{World Motor Vehicle Production 2016} \citep{OICA2016}.
-% The resulting companies are depicted in \cref{tab:casestudy-brands}.
-
-% Secondly, a list of keywords must be composed in order to search for tweets for the specific companies.
-% As these companies own several customer-facing car manufacturing brands these will be used as keywords too.
-% Therefore, \cref{tab:casestudy-brands} also contains all customer-facing car manufacturing brands for the top five companies.
-
-% Thirdly, the companies must be traded on any stock exchange market and the stock symbols and the market have to be researched in order to retrieve their stock prices.
-% The results of this research are depicted in \cref{tab:casestudy-companies-counts-and-symbols}.
-
-%\subsection{G2 - Gather Tweets and their Sentiments and Stock Prices}
-%\label{ss:conclusion-summary-g2}
-
-% \item \textbf{G2-Q4} - Why Twitter and not anything else? (2.3)
-% \item \textbf{G2-Q5} - In which way tweets can be collected?
-% \item \textbf{G2-Q6} - In which way sentiments can be determined?
-% \item \textbf{G2-Q7} - Which sentiments are present for various companies?
-
-% The research goal 2 consists of four research tasks.
-% First the decision for using Twitter as social media platform of choice has been made as the characters are limited for each post and therefore the probability of a single topic per tweet is higher than on other platforms.
-% Furthermore, several other papers in literature have been using Twitter as reliable source.
-% This has been discussed in \cref{s:background-socialnetworks}.
-
-% Secondly, there is the question how tweets can be collected from Twitter which has been answered in \cref{ss:casestudy-gatherdata-tweets}.
-% Three different possibilities of tweet collection could be identified:
-
-% \begin{description}
-%     \item[Official Twitter Search \ac{API}]
-%         follows the pull principle.
-%         The user requests something and the \ac{API} sends a response.
-%         But there were some serious limitations therefore this option could not be used.
-
-%     \item[Twitter search on website]
-%         does not have the limitations of the search \ac{API}.
-%         But it is no easy task to download and save search results from the official Twitter page.
-%         Therefore, this possibility has also been omitted due to difficulties.
-
-%     \item[\ac{DMITCAT}]
-%         is a toolset for capturing and analyzing tweets.
-%         It follows a different approach than the search \ac{API}.
-%         It supports the official streaming \ac{API} which follows a push principle and enables its users to capture tweets using up to 400 keywords.
-%         Therefore, the decision has been made to use \ac{DMITCAT} to capture tweets.
-
-% \end{description}
-
-% Thirdly, research has been made in which way sentiments can be determined (see \cref{s:casestudy-normalization} and \cref{s:casestudy-sentiment} for more details).
-% Most sentiment detection algorithms perform better if the text source has been normalized in some way.
-% Normalization includes lower casing of text, applying stopwords, lemmatization, stemming and minor enhancements.
-% All of these normalization techniques have been applied to the collection of tweets which was a quite time-consuming task as there were over 16 million tweets captured (see \cref{tab:casestudy-companies-numberoftweets}).
-
-% Four sentiment detection algorithms have been selected for the case study: \tb{}, \nb{}, \me{} and \svm{}.
-% In order to standardize the training and classification of each algorithm the \emph{scikit-learn} framework has been used.
-% The framework includes all algorithms and what is called a \emph{pipeline} to perform this standardization for training and classification purposes.
-% The full script to train and analyze tweet sentiments can be found in the appendix (see \cref{lst:appendix-tweeets_analyzer}).
-
-% Fourthly, an analysis has been performed which sentiments are present in which company.
-% This is done in \cref{s:analysis-sentiments} starting on page \pageref{s:analysis-sentiments}.
-% An overview of the tweet sentiments is depicted in \cref{tab:analysis-sentiments-general}.
-% It is shown that almost \SI{75}{\percent} of all tweets were rated as positive across all classifiers but there are differences in percentages by classifiers and company.
-% The \tb{} classifier for example is very optimistic whereas the \nb{} classifier is relatively pessimistic.
-% The same holds true for certain companies: \SI{80}{\percent} of all \gm{} tweets were positive whereas only $\frac{2}{3}$ of \vw{} tweets were positive.
-
-%\subsection{G3 - Comparing Sentiment Time Series with Share Prices}
-%\label{ss:conclusion-summary-g3}
-
-% \item \textbf{G3-Q8} - Can the time series of sentiments explain the share prices?
-
-% company      SA_TB.x SA_TB.y SA_NB.x SA_NB.y SA_ME.x SA_ME.y SA_SVM.xSA_SVM.ySA_TB   SA_NB   SA_ME   SA_SVM  RT      NoRt    total   count
-% <chr>        <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>   <int>
-% 1Ford           0       0       1       1       0       0       0       0       0       2       0       0       1       1       2      80
-% 2GM             5       1       6       9       1       3       5       7       6      15       4      12      17      20      37      80
-% 3Hyundai        7       8       7       0       7       1       7       1      15       7       8       8      28      10      38      80
-% 4Toyota         0       0       0       0       0       0       0       0       0       0       0       0       0       0       0      80
-% 5VW             0       6       6       1       0       1       9       3       6       7       1      12      15      11      26      80
-%                12      15      20      11       8       5      21      11      27      31      13      32      61      42     103     400
-
-% In \cref{s:analysis-granger} the time series have been compared to each other using the Granger analysis.
-% It tries to find a relation between the time series using a lag (in days).
-% In total 400 tests have been performed: five companies for lags from one to ten days and four different sentiment classifiers using two different datasets (one with all tweets and one with omitted retweets).
-% The results are depicted in \cref{tab:analysis-classifiercomparision-summary}.
-% From these 400 performed tests 103 were significant.
-% It has been shown that omitting \acp{RT} had a negative effect on the results (61 significant tests using all tweets versus 42 significant tests with omitted \acp{RT}).
-% For the company \ford{} only one classifier yielded to a significant result (\fnb{} with both datasets).
-% But for the company \toyota{} not a single setup resulted in a significant result.
-
-\section{Discussion and Limitations}
-\label{s:conclusions-discussion}
-
-% This thesis tried to focus on five automotive companies but there were several difficulties during execution which led to several limitations.
-
-% The first limitation is Twitter as datasource.
-% As the official search \ac{API} proved to be insufficient as there are some understandable limits in place the \ac{DMITCAT} approach was a good decision.
-% But using \ac{DMITCAT} had also some serious drawbacks:
-
-% \begin{itemize}
-%     \item
-%         The software must be installed by oneself and the machine must be up and running to collect tweets.
-%         As the personal computer cannot be kept running continuously for more than one month the decision has been made to install \ac{DMITCAT} to a virtual machine in the cloud.
-%         This decision resulted in several other problems:
-
-%         \begin{itemize}
-%             \item
-%                 The capacity of the provided virtual machine was way too small as 30 \ac{GB} of data have been captured within 14 days.
-%             \item
-%                 The virtual machine shut down every day on 7 PM.
-%                 Therefore several tweets were not captured at all.
-%             \item
-%                 New \ac{DMITCAT} releases have been published which required a database upgrade.
-%                 This was a quite time-consuming task and required collection for the specific query bin to be stopped.
-
-%             \item
-%                 The excerpt of the collected data which was needed to perform the analysis needed over 4 \ac{GB} in compressed size.
-%         \end{itemize}
-
-%     \item
-%         \ac{DMITCAT} also uses the official Twitter \ac{API} and as a result some limits apply.
-%         These limits were hit from time to time and forced the tweet collection to pause.
-%         But the software continued to collect tweets automatically after the corresponding time window.
-% \end{itemize}
-
-% Secondly, the resulting gaps from data collection in the tweet time series resulted in fragmented data which made it pretty hard to analyze.
-% Maybe the results would be more precise if these gaps could be removed.
-
-% Thirdly, the training of the sentiment classifiers used the Twitter corpus of \ac{NLTK} which contains 5000 positive and 5000 negative tweets.
-% To improve the accuracy of the classifiers the training data could be extracted from the collected tweets which would require manual rating of the training set.
-
-% From these limitations the area for improvement for future research can be derived.
-% Particularly the gaps in the Twitter time series could be a serious problem which make some statistical analysis unreliable.
-
-\section{Future Research}
-\label{s:conclusions-future}
-
-% Future work:
-% Issues with DMI TCAT (no gaps!)
-% sarcasm in tweets
-% retweets?
-% classification in positive, neutral and negative?
-
-% This thesis provides a basis for upcoming researches and further points of interest can be deduced from the results of the study and the described limitations.
-
-% First, the issues with the installation and maintenance of \ac{DMITCAT} need to be solved.
-% As the issues were technical they should be easy to solve by providing a computer with more resources which can run 24/7 for several months.
-% Furthermore, the collected data needs a large amount of disk space and the sentiment classification algorithms need computation power and a fast hard disk.
-% Providing a computer as described above would also overcome the limitation of downloading the collected tweets from a virtual machine in order to analyze them.
-
-% Secondly, the classifiers have been trained for a binary rating of tweets (positive or negative).
-% In literature some also experimented with a trinary rating (positive, neutral or negative) which may lead to new conclusions.
-
-% Thirdly, the performed text pre-processing was a mixture of several approaches in literature.
-% A more fine-grained approach would especially improve the identification of sarcasm, slang and abbreviations within tweets.
-% Therefore, more research is needed to fine tune the text pre-processing and classification algorithms.
+\section*{Future Research}\label{c:future}
+This thesis provides a basis for future research in medical imaging segmentation documentation and guidance.
+Further points of research can be inferred from the limitations described in \cref{c:limitations}.\\
+First and foremost, as this paper only managed to gather results from a limited number\footnote{n=\numberofTesters} of testers, the issue with tester participation needs to be addressed in follow-up research.
+This could be solved via the following steps.
+Firstly, allocating more time for testers to perform the task.
+And secondly, trying to engage more testes to start with.\\
+Secondly, the segmentation performance of different guide structures may be evaluated by strategic \textit{A/B testing} like described by \citeauthor{brataUserExperienceImprovement2020}.
+Whereby, testers are unknowingly divided into two groups.
+Version A of a guide is handed out to group A and version B of a guide is handed out to group B.
+By comparing the performance of the two groups, the performance of different guide formats can be indirectly evaluated.\\
+Furthermore, to ensure a consistent bone mask across all testing participants a fixed HU threshold range should be defined \cite{chavezGuidelinesMicroComputed2021}.\\
+Therefore, more research is needed to answer the research question, whether inexperienced users benefit from a segmentation guide.
