--- a/thesis.tex
+++ b/thesis.tex
@@ -6,7 +6,7 @@
 \makeglossaries{}
 
 % show if something extends past margins
-%\RequirePackage{showframe} % TODO
+\RequirePackage{showframe} % TODO
 
 \input{includes/shared-preamble-acronyms}
 
